'sessionForRule'
