# controller/sys_casbin.go
@@ -18,7 +18,7 @@ type SysCasbinController struct {
 // @Produce application/json
 // @Param data body request.CasbinInReceive true "权限id, 权限模型列表"
 // @Success 200 {string} string "{"success":true,"data":{},"msg":"更新成功"}"
-// @Router /casbin/UpdateCasbin [post]
+// @Router /casbin/updateCasbin [post]
 func (sysCasbin *SysCasbinController)UpdateCasbin(c *gin.Context) {
 	var cmr request.CasbinInReceive
 	_ = c.ShouldBindJSON(&cmr)
